Issue #14505: Fix file descriptor leak when deallocating file objects created with PyFile_FromString().